# huhcli

./: .gitignore  README.md  clean.zsh  install.sh  pyproject.toml
src/huh/: __main__.py  ai.py  main.py  paths.py
